--- a/requirements.txt
+++ b/requirements.txt
@@ -4,21 +4,27 @@ certifi==2018.8.24
 cffi==1.11.5
 chardet==3.0.4
 colorama==0.4.0
+defusedxml==0.5.0
 dj-database-url==0.5.0
 Django==2.1.1
+django-allauth==0.38.0
 django-cors-headers==2.4.0
+django-rest-auth==0.9.3
 djangorestframework==3.8.2
 Faker==0.9.1
 gunicorn==19.9.0
 httpie==0.9.9
 idna==2.7
+oauthlib==2.1.0
 Pillow==5.3.0
 psycopg2==2.7.5
 pycparser==2.19
 Pygments==2.2.0
 python-dateutil==2.7.3
+python3-openid==3.1.0
 pytz==2018.5
 requests==2.19.1
+requests-oauthlib==1.0.0
 six==1.11.0
 text-unidecode==1.2
 urllib3==1.23
